update plus.html with associativity info and example

--- a/html/plus.html
+++ b/html/plus.html
@@ -35,9 +35,9 @@
         }
     </style>
 
-<noscript>
-  <link rel="stylesheet" href="../css/nojs.css">
-</noscript>
+    <noscript>
+        <link rel="stylesheet" href="../css/nojs.css">
+    </noscript>
 
 </head>
 
@@ -74,7 +74,7 @@
 
             <main>
                 <article>
-<noscript><span>This Web Site requires JavaScript!</span></noscript>
+                    <noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">Introduction</h1>
                     <ol>
                         <li>The addition (+) operator produces
@@ -94,8 +94,33 @@
                                     are concatenated
                                 <li>Otherwise, both sides are <em>converted to numbers</em> (coerced), and numeric
                                     addition is performed
+
                             </ol>
                     </ol>
+                </article>
+                <article>
+                    <h1 class="count">Associativity</h1>
+                    <dl>
+                        <dt>Chat GPT
+                        <dd>
+                            <ol>
+                                <li>
+                                    Yes, addition (+) is left-associative in JavaScript
+                                <li>
+                                    Left-associative means that when multiple operators of the same precedence appear in
+                                    an expression, the operations are
+                                    evaluated from left to right
+                                <li>
+                                    <pre class="details-code-aclass">
+console.log(1 + 2 + "3")
+
+// "33" (not 123)
+                                        </pre><!-- code-content -->
+
+                            </ol>
+                    </dl>
+
+
                 </article>
 
                 <article>
@@ -292,6 +317,95 @@ console.log(y)</pre><!-- code-content -->
                                 </pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
                 </article>
+
+<article>
+    <h1 class="count">Code Example</h1>
+    <details open><!--details CODE-->
+        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+        <pre class="details-code-aclass">
+What will be displayed after the execution of the next code block?
+
+a = 8;
+b = 3;
+c = b++ + a-- + --a;
+
+console.log(c)
+
+1&rpar; 17
+2&rpar; 16
+3&rpar; 18
+4&rpar; 15
+  </pre><!-- code-content -->
+    </details><!--details CODE-->
+
+    <br class="small-view">
+    <br class="wide-view">
+
+    <details open><!--Details CONSOLE -->
+        <summary class="details-console-summary">
+            [JavaScript Inserts]
+        </summary>
+        <pre class="details-console-aclass small-view">
+17 </pre><!-- small-view -->
+        <pre class="details-console-aclass wide-view">
+17 </pre><!-- wide-view -->
+    </details><!--details CONSOLE -->
+
+</article>
+
+
+<article>
+    <h1 class="count">Code Example</h1>
+    <details open><!--details CODE-->
+        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+        <pre class="details-code-aclass">
+INSERT CODE TWO
+  </pre><!-- code-content -->
+    </details><!--details CODE-->
+
+    <br class="small-view">
+    <br class="wide-view">
+
+    <details open><!--Details CONSOLE -->
+        <summary class="details-console-summary">
+            [JavaScript Inserts]
+        </summary>
+        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT TWO (small view) 
+</pre><!-- small-view -->
+        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT TWO (wide view) 
+</pre><!-- wide-view -->
+    </details><!--details CONSOLE -->
+
+</article>
+
+<article>
+    <h1 class="count">Code Example</h1>
+    <details open><!--details CODE-->
+        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+        <pre class="details-code-aclass">
+INSERT CODE THREE
+  </pre><!-- code-content -->
+    </details><!--details CODE-->
+
+    <br class="small-view">
+    <br class="wide-view">
+
+    <details open><!--Details CONSOLE -->
+        <summary class="details-console-summary">
+            [JavaScript Inserts]
+        </summary>
+        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT THREE (small view) 
+</pre><!-- small-view -->
+        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT THREE (wide view) 
+</pre><!-- wide-view -->
+    </details><!--details CONSOLE -->
+
+</article>
+                <!--here-->
 
 
                 <article>
